# harmony

./: .gitignore  README.md  meson.build
img/: harmony.ai  harmony_card.ai
scripts/: single.R
src/: HarmonySettings.cpp  HarmonySettings.hpp  LibraryGitHash.hpp.in  LibraryInfo.cpp  LibraryInfo.hpp  LibraryVersion.hpp.in  QVAnalysis.cpp  QVAnalysis.hpp  SimpleBamParser.cpp  SimpleBamParser.h  main.cpp  meson.build  qv-pred-emp.html
